# alliance-os

./: Makefile  Makefile.in  README.md  configure  configure.in
development/CK/: Makefile  Makefile.in  graph.c  main.c  memory.c  objmgmt.c  paging.c  pri_heap.c  resource.c  sched.c  shmem.c  signal.c
development/CK/architecture/I80X86/: cachekthread.c  callgates.S  entry.c  exceptions.S  idle.c  init.c  irq.c  jump.S  kernel.c  math.c  memhw.c  set_vec.c  tasks.c  text.c
development/CK/demo/: Makefile  Makefile.in  demo.h  demokernel.c  demotasks.c  demotext.c  inittask.c
development/CK/docs/: CK-i386.txt  MEMBROKER  PORTING  RESOURCES  SECURITY  STANFORD  TODO  ck-rel3.1.txt  os-persistance-rel4.txt  sched.html
development/CK/docs/CK-specs-4.0/: CK-specs-4.0.lyx  graphrep.ps  priheap.ps  relgraph.ps
development/CK/docs/ELF/: elf-prog.ps  elf-spec.ps
development/CK/include/: ckerror.h  ckkernelcalls.h  ckobjects.h  ckresource.h  cksignal.h  debug.h  depgraph.h  memory.h  mutex.h  objects.h  pri_heap.h  resource.h  sched.h  shmem.h
development/CK/lib/: Makefile  Makefile.in
development/CK/lib/include/: cklib.h  cksyscalls.h
development/CK/monitor/: README  dbg-par.c  dbg-ser.c  debugger.c  gdb-stub.c  profiler.S  profiler.c  profiler.h  ser-lpt.c
development/CK/scripts/: generatejumps
development/FSSK/docs/: fssk-0_0_1.html
development/GrSK/: GrSKStruct.txt  demotex.c  demotex.h  grskMIB.txt  rotate.c  texture.c
development/GrSK/docs/: GRSK-LM-specs-0.1.html  GRSK-LM-specs-0.2.html  GRSK-LM-specs-0.3.html
development/IOSK/: Makefile  Makefile.in  internal.c  iosk-common.c  iosk-impl.c  iosk-skels.c  iosk-stubs.c  iosk.idl  ioskclient.c
development/IOSK/docs/: IOSK-spec.html  TODO
development/IOSK/include/: internal.h  iosk.h
development/KL/Alloc/: BitmapAlloc.c  FreelistAlloc.c  Makefile  Makefile.in
development/KL/Exec/: ExecClose.c  ExecInit.c  ExecLoad.c  ExecOpen.c  ExecProbe.c  ExecSetSymbols.c  ExecSymbols.c  LoaderTester.c  LoaderTester.c.bak  MakeTest  MakeTest.in  MakeTest.in.bak  Makefile  Makefile.in
development/KL/Exec/ELF/: linker.c  loader.c
development/KL/Exec/TestSuite/: ArrayTest.c  (+13 more)
development/KL/Memory/: MakeTest  MakeTest.in  MakeTest.in.bak  Makefile  Makefile.in  MemoryCompare.c  MemoryCopy.c  MemorySet.c  MemoryTester.c  MemoryTester.c.bak
development/KL/Monitor/: LowLevelTrace.c  MakeTest  MakeTest.in  Makefile  Makefile.in  MonitorTester.c  Print.c  Trace.c  TraceLevel.c  TraceOptions.c
development/KL/Msg/: Makefile  Makefile.in  msg.c  msg.h
development/KL/Queue/: MakeTest  MakeTest.in  MakeTest.in.bak  Makefile  Makefile.in  QueueAlloc.c  QueueFree.c  QueueInit.c  QueueInsert.c  QueueRemove.c  QueueTester.c  QueueTester.c.bak
development/KL/String/: MakeTest  MakeTest.in  Makefile  Makefile.in  StringAppend.c  StringCompare.c  StringCompareNoCase.c  StringCopy.c  StringFormat.c  StringLength.c  StringMatch.c  StringNumCopy.c  StringTester.c
development/KL/TestStubs/: alloc.c  alloc.c.bak
development/KL/Threads/: Makefile  Makefile.in  Mutex.c  Thread.c
development/KL/docs/: TODO
development/LM/: LMlibInit.c  LMlibUninit.c  LMload.c  LMunload.c  LoadModTester.c  MakeTest  MakeTest.in  Makefile  Makefile.in  ParseInitString.c  mib.c  mib.c.bak  mib.h  mib.txt  mibdefs.h
development/LM/SI/: si_deriv.html  si_fondam.html  si_prefissi.html
development/LM/TestSuite/: BareBoneLM.c  LMinit.c  LMinitUnInit.c  LMprobe.c  LMwithKLcall.c  MIBdata.c  MakeTest  MakeTest.in
development/LM/docs/: LM-spec.html  TODO
development/LM/include/: iosklm.h  lmsys.h
development/NetSK/docs/: CommManager.html  Schematics.html
development/SORB/: HISTORY  Makefile  README  TODO  client.c  echo-server.c  echo-stub.c  echo.idl  implementation-na.c  implementation.c  orb.c  prueba.c
development/SORB/docs/: SORB-specs-1.html  SystemORB_overview_1.html
development/SORB/idl-compiler/: Makefile  NOTES  ORB-DEPENDANT  STYLE  TODO  hFile.c  main.c  toString.c  utils.c
development/SORB/include/: echo-server.h  echo-skel.h  echo.h  orb.h
development/SORB/libIDL/: AUTHORS  BUGS  ChangeLog  IDL.h  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.guess  config.sub  configure  configure.in  lexer.l  libIDL.info  libIDL.spec  libIDL.texi  ltconfig  ltmain.sh  mkinstalldirs  ns.c  parser.y  tstidl.c  util.c  util.h
development/SORB/libIPC/: HISTORY  Makefile  clean.c  exec1.c  exec2.c  ipcqueue.c  libIPC.c
development/SORB/scripts/: finished.msg
development/UISK/docs/: UISK-2.html  UISK.fig  app_timeline.fig
development/boot/ABL/: Makefile  Makefile.in  elf.c  main.c  script.c
development/boot/GRUB/: Makefile  Makefile.in
development/boot/shared/: Makefile  Makefile.in  disk_io.c  gunzip.c  misc.c
development/docs/: Build.html  CFileHeader  CFunctionHeader  CodingGuidelines.html  GeneralSystemSpecs.html  SuccessBuild.html  WritingGuidelines.html  gpl.html
development/include/: klibs.h  lm.h  multiboot.h  systemdefs.h  testreport.h  teststubs.h  teststubs.h.bak  typewrappers.h
development/scripts/: stats
research/CK/scheduler/: makefile  pri_heap.c  sched.c  sim.c
research/boot/dos/: Makefile  Makefile.in  README  config.status  configure  configure.in  loader.asm
research/boot/dos/binaries/: loader.com  test.elf
research/boot/dos/docs/: bootloader.html  multiboot.txt
research/boot/dos/test/: MakeTest  MakeTest.in  kernel.c
research/docs/: Research.html
research/dynalinker/: Makefile  Makefile.in  config.status  configure  configure.in
research/dynalinker/docs/: BUGS  DynSH.html  TODO
research/dynalinker/elfloader/: Makefile  Makefile.in  cpu.c  dumpfunc.c  elflinker.c  elfloader.c  endian.c  entrypoint.c  statistics.c
research/dynalinker/elfloader/include/: elfloader.h
research/dynalinker/samplecode/: MakeTest  MakeTest.in  assignGlobal.c  declareGlobal.c  morecomplex1.c  morecomplex2.c  sim  simplecalled.c  simplecaller.c
research/dynalinker/shell/: Makefile  Makefile.in  cmddynalinker.c  shell.c
research/dynalinker/shell/include/: cmddynalinker.h  shell.h
(+190 files in other folders)
